--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link href="styles.css" rel="stylesheet">
+  <script src="script.js" async></script>
   <title>Mix-Or-Match</title>
 </head>
 <body>
